--- a/CodeshopWarehouse.Business/CodeshopWarehouse.Business.csproj
+++ b/CodeshopWarehouse.Business/CodeshopWarehouse.Business.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeshopWarehouse.Data\CodeshopWarehouse.Data.csproj" />
+    <ProjectReference Include="..\CodeshopWarehouse.Entities\CodeshopWarehouse.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
