started front end of the project

--- a/CodeshopWarehouse.Web/appsettings.json
+++ b/CodeshopWarehouse.Web/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "CodeshopWarehouseWebContext": "Server=(localdb)\\mssqllocaldb;Database=CodeshopWarehouseWebContext-64e09784-a788-4475-af73-40b9aeb10754;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
