--- a/CodeshopWarehouse.Web/appsettings.json
+++ b/CodeshopWarehouse.Web/appsettings.json
@@ -1,18 +1,11 @@
 {
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CodeshopWarehouseWebContext": "Server=(localdb)\\mssqllocaldb;Database=CodeshopWarehouseWebContext-64e09784-a788-4475-af73-40b9aeb10754;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CodeshopWarehouseWebContext": "Server=(localdb)\\mssqllocaldb;Database=CodeshopWarehouseWebContext-c4f8ddfa-32b9-45c0-b33d-dc80ac16dce3;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
